# atlas-tdd-september-2025

./: .gitignore
EuroToDollarSimplified/: CMakeLists.txt
EuroToDollarSimplified/source/: main.cpp
EuroToDollarSimplified/source/presenter/: euro_to_dollar_presenter.h  euro_to_dollar_presenter_impl.h
EuroToDollarSimplified/source/services/: euro_to_dollar_calculator_impl.h
EuroToDollarSimplified/tests/: CMakeLists.txt  Mockeuro_to_dollar_view.h
EuroToDollarSimplified/tests/presenter/: euro_to_dollar_presenter_test.cpp  euro_to_dollar_presenter_test.h
FakeDemo/: CMakeLists.txt  main.cpp
FakeDemo/tests/: CMakeLists.txt  globaltest.cpp  globaltest.h  myservice_using_dependency_test.h
MyLogger/: CMakeLists.txt  ConsoleWriter.h  Logger.h  Writer.h
ParameterTestProjekt/: CMakeLists.txt
ParameterTestProjekt/tests/: CMakeLists.txt
PersonenServiceProjekt/: CMakeLists.txt
PersonenServiceProjekt/source/persistence/: person.h  personen_repository.h
PersonenServiceProjekt/source/services/: BlackListService.h  personen_service.h  personen_service_exception.h  personen_service_impl.h
PersonenServiceProjekt/tests/: CMakeLists.txt
PersonenServiceProjekt/tests/services/: MockBlackListService.h  Mockpersonen_repository.h  personen_service_impl_test.cpp  personen_service_impl_test.h
QT6EuroToDollarCalculator/: CMakeLists.txt
QT6EuroToDollarCalculator/source/presenter/: euro_to_dollar_presenter_impl.h
QT6EuroToDollarCalculator/tests/presenter/: euro_to_dollar_presenter_impl_test.cpp  euro_to_dollar_presenter_impl_test.h
TDD_DEMO/: CMakeLists.txt
TDD_DEMO/source/collection/: Stapel.h
TDD_DEMO/tests/: CMakeLists.txt
TDD_DEMO/tests/collection/: StapelTest.cpp  StapelTest.h
Tag1_01StapelProjekt/: CMakeLists.txt
Tag1_01StapelProjekt/source/collections/: Stapel.cpp  Stapel.h  StapelException.h
Tag1_01StapelProjekt/tests/: CMakeLists.txt  test.cpp
Tag1_01StapelProjekt/tests/collections/: StapelTest.cpp  StapelTest.h
Tag1_01StapelProjekt/tests/google/: CMakeLists.txt
Tag1_01StapelProjekt/tests/google/googlemock/: CMakeLists.txt
Tag1_01StapelProjekt/tests/google/googletest/: CMakeLists.txt
Tag1_02Schwein/: CMakeLists.txt
Tag1_02Schwein/source/services/: Dependency.h  DependencyImpl.h  Mult.h  MultImpl.h  MultOptimizer.h  MyServiceUsingDependency.h  UniqueDependency.h  (+1 more)
Tag1_02Schwein/tests/: CMakeLists.txt
Tag1_02Schwein/tests/services/: MockDependency.h  MockUniqueDependency.h  MyServiceUsingDependencyTest.cpp  MyServiceUsingDependencyTest.h  UniqueServiceTest.cpp  UniqueServiceTest.h
Tag1_02Schwein/tests/tiere/: SchweinTest.cpp  SchweinTest.h
(+4 files in other folders)
